--- a/css/style.css
+++ b/css/style.css
@@ -2405,6 +2405,21 @@ body {
   }
 }
 
+.careers-container::after {
+  content: '';
+  position: absolute;
+  background-image: url(../assets/img/patterns/left-downward-arrow.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  top: 300px;
+}
+
+.careers-join {
+  border-radius: 100%;
+}
+
 /* LOCATIONS */
 
 .location-img {
@@ -2618,7 +2633,7 @@ body {
   color: #fff;
 }
 
-@media screen and (width > 768px) {
+@media screen and (width > 1024px) {
   .location-button-message {
     margin-left: 149px;
   }
