--- a/css/style.css
+++ b/css/style.css
@@ -183,28 +183,35 @@ body {
   font-size: 15px;
   line-height: 25px;
   font-weight: 700;
-  margin-top: 34px;
-  z-index: 1;
   color: #fff;
-}
-
-.button-introduction::after {
-  content: '';
-  position: absolute;
-  background-color: #fcb72b;
   width: 180px;
   height: 53px;
-  right: -40px;
-  top: -10px;
-  z-index: -1;
+  background-color: #FCB72B;
+  margin-top: 34px;
+  padding-top: 14px;
+}
+
+@media screen and (width > 759px){
+  .button-introduction{
+    margin-top: 32px;
+  }
 }
 
 @media screen and (width > 1024px) {
   .button-introduction {
     left: 299px;
-    margin-top: 54px;
+    margin-top: 40px;
   }
 }
+
+@media (hover:hover) {
+  .button-introduction:hover{
+    border: solid #FCB72B;
+    background-color: transparent;
+    color: #FCB72B;
+  }
+}
+
 
 .arrow-right {
   position: relative;
@@ -293,7 +300,15 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  color: #fff;
 }
+
+@media (hover:hover){
+  .hover-desktop:hover{
+    color: #FCB72B;
+  }
+}
+
 
 @media screen and (width > 768px) {
   .position-menu {
@@ -304,6 +319,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     margin-top: 26px;
   }
 }
@@ -316,7 +332,7 @@ body {
 
 .menu-color {
   margin: 0;
-  color: #e5ecf4;
+  color: #fff;
   font-size: 18px;
   line-height: 25px;
   font-weight: 700;
@@ -339,30 +355,22 @@ body {
   font-size: 15px;
   line-height: 25px;
   font-family: 'Space Mono', monospace;
-  width: 192px;
-  height: 25px;
+  width: 180px;
+  height: 53px;
   display: flex;
   align-items: center;
   justify-content: center;
   top: 362px;
   left: 30px;
-}
-
-.position-link::after {
-  content: '';
-  position: absolute;
-  width: 192px;
-  height: 53px;
-  background-color: #fcb72b;
-  bottom: -12px;
-  z-index: -1;
+  background-color: #FCB72B;  
 }
 
 @media screen and (width > 768px) {
   .position-link {
-    top: -25px;
+    top: 10px;
     left: 358px;
     color: #fff;
+    position: absolute;
   }
 }
 
@@ -371,6 +379,26 @@ body {
     left: 841px;
   }
 }
+
+@media (hover:hover) {
+  .position-link:hover{
+    border: solid #FCB72B;
+    background-color: transparent;
+    color: #FCB72B;
+  }
+}
+
+
+.hover-desktop{
+  color: #fff;
+}
+
+@media screen and (width > 768px){
+  .hover-desktop{
+    color: #939CAA;
+  }
+}
+
 
 /* main */
 /* 
@@ -588,6 +616,7 @@ body {
   .container-information-desktop-1 {
     display: flex;
     flex-direction: row-reverse;
+    justify-content: start;
     margin-top: 200px;
   }
 }
@@ -669,7 +698,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
   margin-left: 32px;
   font-family: 'Space Mono', monospace;
 }
@@ -687,6 +715,7 @@ body {
   .information-container-1 {
     align-items: start;
     margin-right: 0;
+    margin-left: 165px;
   }
 }
 
@@ -731,33 +760,24 @@ body {
 }
 
 .information-link-1 {
-  position: relative;
+  font-family: 'Space Mono', monospace;
   font-size: 15px;
   line-height: 25px;
+  font-weight: 700;
   color: #fff;
-  margin-top: 46px;
-}
-
-@media screen and (width > 1024px) {
-  .information-link-1 {
-    margin-left: 45px;
-  }
-}
-
-.information-link-1::after {
-  content: '';
-  position: absolute;
   width: 180px;
   height: 53px;
-  background-color: #fcb72b;
-  left: -50px;
-  top: -15px;
-  z-index: -1;
+  background-color: #FCB72B;
+  margin-top: 34px;
+  padding-top: 14px;
+  text-align: center;
 }
 
-@media screen and (width > 1024px) {
-  .information-link-1::after {
-    left: -45px;
+@media (hover:hover) {
+  .information-link-1:hover{
+    border: solid #FCB72B;
+    background-color: transparent;
+    color: #FCB72B;
   }
 }
 
@@ -838,11 +858,9 @@ body {
 
 .information-container-2 {
   width: 311px;
-  height: 311px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
   margin-left: 32px;
   font-family: 'Space Mono', monospace;
 }
@@ -850,7 +868,6 @@ body {
 @media screen and (min-width: 768px) {
   .information-container-2 {
     width: 573px;
-    height: 304px;
     margin-left: 97px;
     margin-right: 97px;
     margin-top: 64px;
@@ -902,40 +919,33 @@ body {
 
 @media screen and (width>1024px) {
   .information-text-2 {
-    text-emphasis: left;
+    text-align: left;
     line-height: 25px;
   }
 }
 
 .information-link-2 {
-  position: relative;
+  font-family: 'Space Mono', monospace;
   font-size: 15px;
   line-height: 25px;
+  font-weight: 700;
   color: #fff;
-  margin-top: 46px;
-}
-
-@media screen and (width>1024px) {
-  .information-link-2 {
-    margin-left: 45px;
-  }
-}
-
-.information-link-2::after {
-  content: '';
-  position: absolute;
   width: 180px;
   height: 53px;
-  background-color: #fcb72b;
-  left: -50px;
-  top: -15px;
-  z-index: -1;
+  background-color: #FCB72B;  
+  margin-top: 34px;
+  padding-top: 14px;
+  text-align: center;
 }
-@media screen and (width>1024px) {
-  .information-link-2::after {
-    left: -45px;
+
+@media (hover:hover) {
+  .information-link-2:hover{
+    border: solid #FCB72B;
+    background-color: transparent;
+    color: #FCB72B;
   }
 }
+
 
 /* information 3*/
 
@@ -943,7 +953,7 @@ body {
   .container-information-desktop-3 {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-around;
+    justify-content: start;
     margin: 0;
     margin-top: 160px;
     overflow: hidden;
@@ -991,6 +1001,7 @@ body {
 @media screen and (width > 1024px) {
   .wallet {
     margin: 0;
+    margin-left: 95px;
   }
 }
 
@@ -1020,18 +1031,16 @@ body {
 
 @media screen and (width > 1024px) {
   .circle-2 {
-    left: 490px;
-    top: -640px;
+    left: 620px;
+    top: -610px;
   }
 }
 
 .information-container-3 {
   width: 311px;
-  height: 311px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
   margin-left: 32px;
   font-family: 'Space Mono', monospace;
 }
@@ -1043,7 +1052,6 @@ body {
     margin-right: 97px;
     margin-top: 64px;
     width: 573px;
-    height: 304px;
   }
 }
 
@@ -1051,6 +1059,7 @@ body {
   .information-container-3 {
     margin: 0;
     align-items: start;
+    margin-left: 165px;
   }
 }
 
@@ -1072,6 +1081,7 @@ body {
     line-height: 48px;
     width: 457px;
     margin-top: 0;
+    text-align: left;
   }
 }
 
@@ -1082,23 +1092,33 @@ body {
   margin-top: 32px;
 }
 
-.information-link-3 {
-  position: relative;
-  font-size: 15px;
-  line-height: 25px;
-  color: #fff;
-  margin-top: 46px;
+@media screen and (width>1024px){
+  .information-text-3{
+    text-align: left;
+    line-height: 25px;
+  }
 }
 
-.information-link-3::after {
-  content: '';
-  position: absolute;
+.information-link-3 {
+  font-family: 'Space Mono', monospace;
+  font-size: 15px;
+  line-height: 25px;
+  font-weight: 700;
+  color: #fff;
   width: 180px;
   height: 53px;
-  background-color: #fcb72b;
-  left: -50px;
-  top: -15px;
-  z-index: -1;
+  background-color: #FCB72B;  
+  margin-top: 34px;
+  padding-top: 14px;
+  text-align: center;
+}
+
+@media (hover:hover) {
+  .information-link-3:hover{
+    border: solid #FCB72B;
+    background-color: transparent;
+    color: #FCB72B;
+  }
 }
 
 /* footer header */
@@ -2209,8 +2229,6 @@ body {
 /* FAQ */
 
 
-
-
 .faq-title {
   margin: 0;
   text-align: center;
@@ -2223,30 +2241,15 @@ body {
   color: #495567;
 }
 
-
 @media screen and (width > 1024px){
-.faq-flex{
-  display: flex;
-  margin-top: 64px;
-  padding: 0 165px;
-}
-
-.faq-column{
-  display: flex;
-  flex-direction: column;
-  width: 703px;
-  margin-left: 90px;
-}
-}
-
-@media screen and (width > 768px){
-  .faq-title{
-  font-size: 48px;
-  line-height: 48px;
-  letter-spacing: -2.14px;
+  .faq-flex{
+    display: flex;
+    flex-direction: row;
+    margin-left: 165px;
+    margin-right: 165px;
+    margin-top: 64px;
   }
 }
-@media screen and (width > 1024px){} 
 
 .faq-works {
   text-align: center;
@@ -2260,118 +2263,136 @@ body {
   margin-top: 48px;
 }
 
-@media screen and (width > 768px){
+
+@media screen and (width > 768px) {
   .faq-works{
-  font-size: 40px;
-  line-height: 48px;
-  letter-spacing: -1.79px;
-  margin-top: 64px;
+    margin-top: 64px;
+    font-size: 40px;
+    line-height: 48px;
+    letter-spacing: -1.79px;
   }
 }
+
 @media screen and (width > 1024px){
   .faq-works{
-    margin-top: 0;
+  width: 285px;
+  margin-top: 0;
   }
-} 
+}
 
-.faq-hidden {
-  background-color: #f2f5f9;
-/*   border: solid red; */
+@media screen and (width > 1024px){
+  .faq-column{
+    display: flex;
+    flex-direction: column;
+    width: 1110px;
+  }
+}
+
+.faq-hidden{
+  margin-top: 16px;
+  padding: 0 32px;
+}
+
+@media screen and (width > 768px){
+  .faq-hidden{
+  padding: 0 39px;
+  }
+}
+
+@media screen and (width > 1024px){
+  .faq-hidden{
+    padding: 0;
+  }
+}
+
+.faq-hidden-margin{
   margin-top: 32px;
-  margin-left: 32px;
-  margin-right: 32px;
-  display: flex;
-  align-items: start;
 }
 
-@media screen and (width > 768px){
-  .faq-hidden{
-    margin-left: 39px;
-    margin-right: 39px;
-  }
-}
 @media screen and (width > 1024px){
-  .faq-hidden{
-    justify-content: space-between;
-    margin: 0;
-    margin-bottom: 24px;
-  }
-
-  .faq-hidden-final{
+  .faq-hidden-margin{
     margin: 0;
   }
-} 
+}
 
-.faq-info {
-  pointer-events: none;
+.faq-info{
+  background-color: #F2F5F9;
+  color: #495567;
+  max-height: 95px;  
+  transition: max-height 0.5s;
   overflow: hidden;
 }
 
-@media screen and (width > 768px){}
-@media screen and (width > 1024px){} 
+@media (hover:hover){
+  .faq-info:hover{
+    background-color: #FFF4DF;
+  }
+}
 
-.faq-subtitle {
-  color: #495567;
+@media screen and (width > 1024px){
+  .faq-info{
+    width: 730px;
+ /*    margin-left: 100px; */
+  }
+}
+
+.faq-hidden-show{
+  max-height: 400px;
+}
+
+
+
+.faq-subtitle{
   margin: 0;
+  padding: 32px 32px 35px;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: -0.8px;
-  font-family: 'Space Mono', serif;
-  font-weight: 700;
-  padding: 32px 60px 0 32px;
+  pointer-events: none;  
 }
 
 @media screen and (width > 768px){
   .faq-subtitle{
-    font-size: 24px;
-    line-height: 28px;
-    letter-spacing: -1.07px;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: -1.07px;
   }
 }
-@media screen and (width > 1024px){} 
 
-.faq-text {
-  color: #495567;
+@media screen and (width > 1024px){
+  .faq-subtitle{
+  }
+}
+
+.faq-text{
   margin: 0;
-  text-align: left;
+  padding: 0 32px 32px 32px;
   font-size: 15px;
   line-height: 25px;
-
-  
-  max-height: 0px;
-  transition: max-height 0.5s;
-  pointer-events: none;  
-
-
-  margin-top: 24px;
-/*   padding: 0 32px 0 28px; */
-  padding: 0 32px 0 28px;
+  text-align: left;
+  pointer-events: none;
 }
-
-@media screen and (width > 768px){
-  .faq-text{
-
-  }
-}
-@media screen and (width > 1024px){} 
-
-.faq-text-show {
-  max-height: 400px;
-}
-
-@media screen and (width > 768px){}
-@media screen and (width > 1024px){} 
 
 .faq-arrow {
   width: 16px;
   height: 8px;
   position: relative;
-  top: 50px;
-  left: -20px;
+  top: -55px;
+  left: 315px;
 }
 
-@media screen and (width > 768px){}
-@media screen and (width > 1024px){} 
+@media screen and (width > 768px){
+  .faq-arrow {
+    left: 685px;
+  }
+}
+@media screen and (width > 1024px){
+  .faq-arrow {
+    left: 685px;
+  }
+} 
+
+
 
 /* CAREERS */
 
@@ -2533,7 +2554,6 @@ body {
   display: flex;
   flex-direction: column;  
   align-items: center;
-  justify-content: space-between;
   padding: 52px 32px 0;
 }
 
@@ -2546,7 +2566,7 @@ body {
   .careers-container-join{
     padding: 0;
     width: 445px;
-    height: 313px;
+    align-items: start;
   }
 }
 
@@ -2597,41 +2617,142 @@ body {
 }
 
 .careers-button-hello{
-  position: relative;
-  color: #FFFFFF;
+  font-family: 'Space Mono', monospace;
+  font-weight: 700;
   font-size: 15px;
   line-height: 25px;
+  color: #fff;
+  width: 180px;
+  height: 53px;
+  background-color: #FCB72B;  
+  margin-top: 34px;
+  padding-top: 14px;
   text-align: center;
-  font-family: "Space Mono", serif;
-  font-weight: 700;
-  padding-top: 46px;
 }
 
-@media screen and (width > 768px){
-  .careers-button-hello{
-  padding-top: 54px;
-  }
-}
 @media screen and (width > 1024px){
   .careers-button-hello{
-    text-align: left;
-    padding: 0;
-    left: -135px;
-    padding-top: 54px;
+    margin-top: 40px;
+    padding: 14px;
     
   }
 }
 
-.careers-button-hello::before{
-  content: "";
-  position: absolute;
+@media (hover:hover) {
+  .careers-button-hello:hover{
+    border: solid #FCB72B;
+    background-color: transparent;
+    color: #FCB72B;
+  }
+}
+
+.apply-color{
+  background-color: #F2F5F9;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #495567;
+  margin-left: 32px;
+  margin-right: 32px;
+  margin-top: 145px;
+  padding-bottom: 32px;
+  margin-bottom: 16px;
+}
+
+.apply-color-margin{
+  margin-top: 16px;
+}
+
+.apply-color-margin-bottom{
+  margin-bottom: 0;
+}
+
+@media screen and (width > 768px){
+  .apply-color{
+    margin-left: 39px;
+    margin-right: 39px;
+    display: flex;
+    flex-direction: row;
+    padding: 32px 0 32px 48px;
+  }
+}
+
+@media screen and (width > 768px){
+  .apply-column{
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (width > 1024px){
+  .apply-color{
+    margin-left: 165px;
+    margin-right: 165px;
+  }
+}
+
+.apply-title{
+  font-family: 'Space Mono', monospace;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: -0.8px;
+  text-align: center;
+  margin: 0;
+  padding-top: 36px;
+}
+
+@media screen and (width > 768px){
+  .apply-title{
+  padding: 0;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: -1.07px;
+  }
+}
+
+
+.apply-country{
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  padding-top: 4px;
+}
+
+@media screen and (width > 768px){
+  .apply-country{
+    padding-top: 8px;
+    text-align: left;
+  }
+}
+
+.apply-job{
   width: 180px;
   height: 53px;
   background-color: #FCB72B;
-  z-index: -1;
-  left: -45px;
-  top: 40px;
+  color: #fff;
+  text-align: center;
+  margin-top: 16px;
+  padding-top: 14px;
 }
+
+@media (hover:hover) {
+  .apply-job:hover{
+    border: solid #FCB72B;
+    background-color: transparent;
+    color: #FCB72B;
+  }
+}
+
+@media screen and (width > 768px){
+  .apply-job{
+    margin-left: auto;
+    margin-right: 48px;
+  }
+}
+
+
+/*  */
 
 /* LOCATIONS */
 
@@ -2775,7 +2896,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   margin-top: 72px;
   margin-left: 32px;
   margin-right: 32px;
@@ -2802,12 +2922,17 @@ body {
   color: #495567;
 }
 
-@media screen and (width > 1024px) {
-  .location-title-final {
-    text-align: left;
+@media screen and (width > 768px) {
+  .location-title-final{
     font-size: 48px;
     line-height: 48px;
     letter-spacing: -2.14px;
+  }
+}
+
+@media screen and (width > 1024px) {
+  .location-title-final {
+    text-align: left;
     width: 351px;
   }
 }
@@ -2820,6 +2945,12 @@ body {
   color: #939caa;
 }
 
+@media screen and (width > 768px){
+  .location-text-final{
+    margin-top: 40px;
+  }
+} 
+
 @media screen and (width > 1024px) {
   .location-text-final {
     text-align: left;
@@ -2829,28 +2960,33 @@ body {
 }
 
 .location-button-message {
-  margin: 0;
+  font-family: 'Space Mono', monospace;
   font-size: 15px;
   line-height: 25px;
-  position: relative;
+  font-weight: 700;
   color: #fff;
+  width: 180px;
+  height: 53px;
+  background-color: #FCB72B;  
+  margin-top: 34px;
+  padding-top: 14px;
+  text-align: center;
+  margin-bottom: 0;
 }
 
-@media screen and (width > 1024px) {
-  .location-button-message {
-    margin-left: 149px;
+@media screen and (width > 1024px){
+  .location-button-message{
+    margin-left: 105px;
   }
 }
 
-.location-button-message::after {
-  content: '';
-  position: absolute;
-  width: 180px;
-  height: 53px;
-  background-color: #fcb72b;
-  left: -50px;
-  top: -10px;
-  z-index: -1;
+@media (hover:hover) {
+  .location-button-message:hover{
+    border: solid #FCB72B;
+    background-color: transparent;
+    color: #FCB72B;
+    cursor: pointer;
+  }
 }
 
 .city-location-1,
